infra/k8s/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser
          args:
            - --baseurl
            - /filebrowser
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared
              mountPath: /srv/share
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: filebrowser-pvc
